--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
-h1{color: brown;}
-body{background-color: rgb(79, 35, 119);}
+h1{color: rgb(10, 4, 39);}
+body{background-color: rgb(119, 35, 87);}
   
